# DropletAnalysis

./: .gitignore  DropletAnalysis_Colab.ipynb  Launch Analysis UI.bat  Launch Batch Analysis.bat  Launch Z-stack UI.bat  README.md  batch_pipeline.py  droplet_pipeline.py  droplet_ui.py  parameters_guide.md  pyproject.toml  run_analysis.ipynb  run_batch.ipynb  run_zstack.ipynb  zstack_pipeline.py  zstack_ui.py
Analysis_Plots/: Analysis Instructions.md  To-do lists
Analysis_Plots/PAGEPurified_5uMsalt_heated_day3/: 40x.csv
Analysis_Plots/layeringpurified_extra2uMsalt_directmix_day0/: 20x.csv  40x.csv
Analysis_Plots/layeringpurified_extra2uMsalt_directmix_day1/: 20x.csv  40x.csv
Analysis_Plots/layeringpurified_extra2uMsalt_directmix_day4/: 20x.csv  40x.csv
Analysis_Plots/layeringpurified_extra2uMsalt_heated_day1/: 20x.csv  40x.csv
Analysis_Plots/layeringpurified_extra2uMsalt_heated_day4/: 20x.csv  40x.csv
Analysis_Plots/layeringpurified_noaddedsalt_directmix_day0/: 20x.csv  40x.csv
Analysis_Plots/layeringpurified_noaddedsalt_directmix_day1/: 20x.csv  40x.csv
Analysis_Plots/layeringpurified_noaddedsalt_directmix_day4/: 20x.csv  40x.csv
Analysis_Plots/layeringpurified_noaddedsalt_heated_day1/: 20x.csv  40x.csv
Analysis_Plots/layeringpurified_noaddedsalt_heated_day4/: 20x.csv  40x.csv
Analysis_Plots/scripts/: metric_a_class_composition.py  metric_b_mean_radius.py  utils.py  (+4 more)
archive/: droplet_analysis_improved.ipynb
notebooks/: run_batch.ipynb
pipeline/: batch_pipeline.py  droplet_pipeline.py  droplet_ui.py
test_files/: snap_1x_classified_params.json
(+1 files in other folders)
